sqlalchemy supports multiprocess, celery tasks not terminating

--- a/tweeter/templates/add_keyword.html
+++ b/tweeter/templates/add_keyword.html
@@ -15,5 +15,6 @@
 <br/><span>{{form.streams.errors[0]}}</span>
 <br/><input type="Submit" value="Add KeyWord">
 </form>
+<a href="{{url_for('stop_celery')}}">Stop Api</a>
 </body>
 </html>
